--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -9,7 +9,6 @@ variables:
     -Dorg.slf4j.simpleLogger.log.org.apache.maven.cli.transfer.Slf4jMavenTransferListener=WARN
     -Dorg.slf4j.simpleLogger.showDateTime=true
     -Djava.awt.headless=true
-
   # As of Maven 3.3.0 instead of this you may define these options in `.mvn/maven.config` so the same config is used
   # when running from the command line.
   # `installAtEnd` and `deployAtEnd` are only effective with recent version of the corresponding plugins.
@@ -20,26 +19,107 @@ variables:
     --show-version
     -DinstallAtEnd=true
     -DdeployAtEnd=true
+  SAST_JAVA_VERSION: 17
+  DEPLOY_PRODUCTION_URL: https://sitodo-example.herokuapp.com
 
-default:
-  image: docker.io/library/maven:3.8.6-eclipse-temurin-17-focal
-  cache:
-    key: pom.xml
-    paths:
-      - .m2/repository
+# Check the list of available templates at https://gitlab.com/gitlab-org/gitlab/-/tree/master/lib/gitlab/ci/templates
+include:
+  - template: Jobs/Code-Quality.gitlab-ci.yml
+  - template: Jobs/SAST.gitlab-ci.yml
+  - template: Jobs/Secret-Detection.gitlab-ci.yml
+  - template: Workflows/Branch-Pipelines.gitlab-ci.yml
 
 stages:
+  - build
   - test
+  - deploy
+  - visualize
+
+build:
+  stage: build
+  image: docker.io/library/maven:3.8.6-eclipse-temurin-17-focal
+  script:
+    - mvn $MAVEN_CLI_OPTS -DskipTests -Dmaven.repo.local=./.m2/repository package
+  cache:
+    key:
+      files:
+        - pom.xml
+      prefix: $CI_JOB_NAME
+    paths:
+      - .m2/repository
+  artifacts:
+    paths:
+      - .m2/
+      - target/
 
 test:
   stage: test
+  image: docker.io/library/maven:3.8.6-eclipse-temurin-17-focal
+  before_script:
+    - apt-get update && apt-get install -y firefox
   script:
     - mvn $MAVEN_CLI_OPTS test
     - grep "Total" target/site/jacoco/index.html
   coverage: '/Total.*?([0-9]{1,3})%/'
+  needs: []
+  cache:
+    key:
+      files:
+        - pom.xml
+    paths:
+      - .m2/repository
   artifacts:
     paths:
       - target/surefire-reports
+      - target/site/jacoco/jacoco.xml
     reports:
       junit:
         - target/surefire-reports/TEST-*.xml
+
+deploy:
+  stage: deploy
+  image: docker.io/library/ruby:3.1.2-slim-bullseye
+  rules:
+    - if: $CI_COMMIT_BRANCH == $CI_DEFAULT_BRANCH
+  needs:
+    - job: test
+      artifacts: false
+  before_script:
+    - apt-get update && apt-get install -y git
+    - gem install dpl --pre --version 2.0.3.beta.3
+  script:
+    - dpl heroku api --api-key $HEROKU_API_KEY
+  environment:
+    name: production
+    deployment_tier: production
+    url: $DEPLOY_PRODUCTION_URL
+
+# Override spotbugs-sast (SAST) to analyze compiled Java artifacts
+spotbugs-sast:
+  variables:
+    MAVEN_REPO_PATH: ".m2/repository"
+    COMPILE: "false"
+  needs:
+    - job: build
+      artifacts: true
+
+# Override code_quality job from the template through the environment variables
+code_quality:
+  variables:
+    CODE_QUALITY_IMAGE: "registry.gitlab.com/gitlab-org/ci-cd/codequality:0.85.27"
+
+# Taken from: https://docs.gitlab.com/ee/ci/testing/test_coverage_visualization.html#maven-example
+coverage_visualization:
+  stage: visualize
+  image: registry.gitlab.com/haynes/jacoco2cobertura:1.0.8
+  script:
+    - python /opt/cover2cover.py target/site/jacoco/jacoco.xml $CI_PROJECT_DIR/src/main/java/
+      > target/site/cobertura.xml
+  needs:
+    - job: test
+      artifacts: true
+  artifacts:
+    reports:
+      coverage_report:
+        coverage_format: cobertura
+        path: target/site/cobertura.xml
