--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -40,7 +40,8 @@ build:
   stage: build
   image: docker.io/library/maven:3.8.6-eclipse-temurin-17-focal
   script:
-    - mvn $MAVEN_CLI_OPTS -DskipTests -Dmaven.repo.local=./.m2/repository package
+    - mvn $MAVEN_CLI_OPTS -DskipTests
+      -Dmaven.repo.local=$CI_PROJECT_DIR/.m2/repository package
   cache:
     key:
       files:
@@ -53,15 +54,13 @@ build:
       - .m2/
       - target/
 
-test:
+test:unit:
   stage: test
   image: docker.io/library/maven:3.8.6-eclipse-temurin-17-focal
-  before_script:
-    - apt-get update && apt-get install -y firefox
   script:
     - mvn $MAVEN_CLI_OPTS test
-    - grep "Total" target/site/jacoco/index.html
-  coverage: '/Total.*?([0-9]{1,3})%/'
+      -Dgroups=unit
+      -Djacoco.destFile=$CI_PROJECT_DIR/target/jacoco-unit.exec
   needs: []
   cache:
     key:
@@ -72,10 +71,56 @@ test:
   artifacts:
     paths:
       - target/surefire-reports
-      - target/site/jacoco/jacoco.xml
+      - target/*.exec
     reports:
       junit:
         - target/surefire-reports/TEST-*.xml
+
+test:functional:
+  stage: test
+  image: docker.io/library/maven:3.8.6-eclipse-temurin-17-focal
+  before_script:
+    - apt-get update && apt-get install -y firefox
+  script:
+    - mvn $MAVEN_CLI_OPTS test
+      -Dgroups=e2e
+      -Djacoco.destFile=$CI_PROJECT_DIR/target/jacoco-functional.exec
+  needs: []
+  cache:
+    key:
+      files:
+        - pom.xml
+    paths:
+      - .m2/repository
+  artifacts:
+    paths:
+      - target/surefire-reports
+      - target/*.exec
+    reports:
+      junit:
+        - target/surefire-reports/TEST-*.xml
+
+test:coverage:
+  stage: test
+  image: docker.io/library/maven:3.8.6-eclipse-temurin-17-focal
+  script:
+    - mvn $MAVEN_CLI_OPTS verify -DskipTests
+    - grep "Total" target/site/jacoco/index.html
+  coverage: '/Total.*?([0-9]{1,3})%/'
+  needs:
+    - job: test:unit
+      artifacts: true
+    - job: test:functional
+      artifacts: true
+  cache:
+    key:
+      files:
+        - pom.xml
+    paths:
+      - .m2/repository
+  artifacts:
+    paths:
+      - target/site/jacoco/jacoco.xml
 
 deploy:
   stage: deploy
@@ -83,7 +128,9 @@ deploy:
   rules:
     - if: $CI_COMMIT_BRANCH == $CI_DEFAULT_BRANCH
   needs:
-    - job: test
+    - job: test:unit
+      artifacts: false
+    - job: test:functional
       artifacts: false
   before_script:
     - apk add --no-cache build-base curl git ruby-dev
@@ -117,7 +164,7 @@ coverage_visualization:
     - python /opt/cover2cover.py target/site/jacoco/jacoco.xml $CI_PROJECT_DIR/src/main/java/
       > target/site/cobertura.xml
   needs:
-    - job: test
+    - job: test:coverage
       artifacts: true
   artifacts:
     reports:
