--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,16 @@
 # Application configuration
 debug=false
+trace=false
+
+sitodo.motivation.empty=Your list is empty :(
+sitodo.motivation.noFinished=You have not finished any of your tasks!
+sitodo.motivation.someFinished=You have finished some of your tasks!
+sitodo.motivation.halfFinished=You have finished half of your tasks!
+sitodo.motivation.allFinished=Congratulations!
+sitodo.motivation.fewItems=You have too few tasks!
+sitodo.motivation.manyItems=You have too many tasks!
+sitodo.motivation.fewItemsThreshold=5
+sitodo.motivation.manyItemsThreshold=10
 
 # H2 Database
 spring.h2.console.enabled=true
