--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,6 @@
 # Application configuration
-debug=false
+## Warning: Set debug to true only during development and debugging!
+debug=true
 trace=false
 
 sitodo.motivation.empty=Your list is empty :(
@@ -12,10 +13,9 @@ sitodo.motivation.manyItems=You have too many tasks!
 sitodo.motivation.fewItemsThreshold=5
 sitodo.motivation.manyItemsThreshold=10
 
-# H2 Database
-spring.h2.console.enabled=true
-spring.datasource.url=jdbc:h2:mem:sitodo
-spring.datasource.driverClassName=org.h2.Driver
-spring.datasource.username=sa
-spring.datasource.password=password
-spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
+# Database connection configuration
+## Warning: The following configurations are for development environment!
+##          Use different values when deploying to production environment!
+spring.datasource.url=jdbc:postgresql://localhost:5432/sitodo
+spring.datasource.username=sitodo
+spring.datasource.password=R83Moz74
