Implement DTO pattern
This commit implements DTO pattern.
The purpose is to avoid using persistence models directly in the view.

Closes #9.

--- a/.gitignore
+++ b/.gitignore
@@ -205,3 +205,8 @@ site/
 # H2 database file
 sitodo.db*
 sitodo.*.db
+
+# IntelliJ Plugins
+.idea/checkstyle-idea.xml
+.idea/sonarlint.xml
+.idea/sonarlint-state.xml
