--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -16,6 +16,6 @@ sitodo.motivation.manyItemsThreshold=10
 # Database connection configuration
 ## Warning: The following configurations are for development environment!
 ##          Use different values when deploying to production environment!
-spring.datasource.url=jdbc:postgresql://localhost:5432/sitodo
+spring.datasource.url=jdbc:h2:mem:sitodo
 spring.datasource.username=sitodo
 spring.datasource.password=R83Moz74
