--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -43,13 +43,27 @@ jobs:
         run: mvn $MAVEN_CLI_OPTS test -Dgroups=unit -Djacoco.destFile=target/jacoco-unit.exec
       - name: Run functional tests
         run: |
-          mvn $MAVEN_CLI_OPTS test -Dgroups=e2e -Djacoco.destFile=target/jacoco-functional.exec
+          mvn $MAVEN_CLI_OPTS test -Dgroups=func -Djacoco.destFile=target/jacoco-functional.exec
       - name: Merge code coverage reports
         run: |
-          mvn verify -DskipTests
+          mvn -DskipTests verify surefire-report:report
       - name: Run SonarScanner
         run: |
           mvn -B verify -DskipTests org.sonarsource.scanner.maven:sonar-maven-plugin:sonar
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
+      - name: Organise test reports
+        run: |
+          mkdir -p target/site/surefire
+          mv target/site/css target/site/surefire/css
+          mv target/site/images target/site/surefire/images
+          mv target/site/surefire-report.html target/site/surefire/surefire-report.html
+      - name: Save test reports as artifact
+        uses: actions/upload-artifact@v3
+        with:
+          name: surefire-jacoco-reports
+          path: |
+            target/site/surefire/
+            target/site/jacoco/
+          retention-days: 1
