--- a/pom.xml
+++ b/pom.xml
@@ -12,8 +12,8 @@
 	<artifactId>sitodo</artifactId>
 	<version>0.2.5-SNAPSHOT</version>
 	<name>sitodo</name>
-	<description>A basic todo app for teaching basic Web programming, Git workflows, and CI/CD. Heavily inspired by the
-		running example in &quot;Test-Driven Development with Python&quot; book by Harry Percival.
+	<description>A basic todo app for teaching basic Web programming, Git workflows, code quality, and CI/CD. Heavily
+		inspired by the running example in &quot;Test-Driven Development with Python&quot; book by Harry Percival.
 	</description>
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
