Draft starter code by removing Sonar-related credentials

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -53,6 +53,8 @@ jobs:
           mvn -DskipTests verify surefire-report:report
       - name: Run SonarScanner
         run: |
+          echo "TODO Create SONAR_TOKEN secret on GitHub Actions"
+          echo "TODO Update sonar.organization and sonar.projectKey properties on pom.xml with your own values"
           mvn -B verify -DskipTests org.sonarsource.scanner.maven:sonar-maven-plugin:sonar
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
